cambio menu notacion

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 Introducción
                             </a>
                             <div class="sb-sidenav-menu-heading">Menú</div>
-                            <a class="nav-link collapsed" href="notacion.html" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                                 Notación musical
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
@@ -49,7 +49,7 @@
                                     <a class="nav-link" href="notacion.html #escritura">Notación de escritura</a>
                                 </nav>
                             </div>
-                            <a class="nav-link collapsed" href="ritmo.html" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                            <a class="nav-link collapsed" href="##" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                                 <div class="sb-nav-link-icon"><i class="gg-music-speaker"></i></div>
                                 Ritmo
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
