--- a/ritmo.html
+++ b/ritmo.html
@@ -43,9 +43,9 @@
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="notacion.html #altura">Notación de altura</a>
-                                    <a class="nav-link" href="notacion.html #duracion">Notación de duración</a>
-                                    <a class="nav-link" href="notacion.html #escritura">Notación de escritura</a>
+                                    <a class="nav-link" href="notacion.html">Notación de altura</a>
+                                    <a class="nav-link" href="notacion.html">Notación de duración</a>
+                                    <a class="nav-link" href="notacion.html">Notación de escritura</a>
                                 </nav>
                             </div>
                             <a class="nav-link collapsed" href="ritmo.html" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
