--- a/ritmo.html
+++ b/ritmo.html
@@ -55,7 +55,7 @@
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="ritmo.html #compas">Compás</a>
+                                    <a class="nav-link" href="#compas">Compás</a>
                                 </nav>
                             </div>
                             <a class="nav-link" href="intervalos.html">
