--- a/dudas.html
+++ b/dudas.html
@@ -63,7 +63,7 @@
                             </div>
                         </div>
                     <div class="card-footer">
-                        <button class="btn btn--radius-2 btn--blue-2" type="submit">Enviar mensaje</button>
+                        <button class="btn btn--radius-2 btn--blue-2" type="submit">Enviar</button>
                     </div>
                     </form>
                 </div>
