--- a/dudas.html
+++ b/dudas.html
@@ -56,7 +56,7 @@
                             <div class="name">Sube un archivo</div>
                             <div class="value">
                                 <div class="input-group js-input-file">
-                                    <input class="input-file" type="file" name="file_cv" id="file">
+                                    <input class="input-file" type="file" name="file" id="file">
                                     <label class="label--file" for="file">Elige un archivo</label>
                                     <span class="input-file__info">Ningún archivo elegido</span>
                                 </div>
